// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Abstract tree should build a prosemirror model for wiki markup 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "simple quote",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "blockquote",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Abstract tree should build a prosemirror model for wiki markup 2`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "{code}code inside noformat{code}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Abstract tree should build a prosemirror model for wiki markup 3`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "language": "xml",
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "{noformat}noformat{noformat}",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;
